--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "angular-animate": "^1.6.1",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^8.1.0",
