--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
     "port": 3000,
     "mongoose": {
-        "uri": "mongodb://localhost/meanBt",
+        "uri": "mongodb://alexpyriel:alex123@ds247327.mlab.com:47327/meanbt",
         "options": {
             "reconnectTries": 30000,
             "reconnectInterval": 1000,
